Updating .gitignore for inclusion of In2it library

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 .idea/
 library/In2it
 library/Zend
-vendor/*/
 vendor/autoload.php
+vendor/composer
+vendor/fzaninotto
+vendor/zendframework
 composer.lock
