Implementing a RESTful interface for our user module

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -6,19 +6,24 @@ bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
 bootstrap.class = "Bootstrap"
 appnamespace = "Application"
 
-resources.modules[] = ""
+resources.modulesetup[] =
+resources.modules[] =
+resources.rest[] =
+
 autoloadernamespaces[] = "In2it_"
 
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
 
 resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
-resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
 
 resources.db.adapter = "Pdo_Sqlite"
 resources.db.params.dbname = APPLICATION_PATH "/data/demo.db"
 resources.db.params.profiler = 1
 
+pluginPaths.In2it_Application_Resource = "In2it/Application/Resource"
+
+resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
 [staging : production]
 
 [testing : production]
