Updating faker library

--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,6 @@
 {
-    
     "require": {
         "zendframework/zendframework1": "1.12.3",
-    
-        
-    "fzaninotto/faker": "1.4.x-dev"
+        "fzaninotto/faker": "~1.4"
     }
 }
